# headless-cms

./: .airmux.yml  .gitignore  AGENTS.md  CONVENTIONS.md  Cargo.toml  README.md  flake.nix  justfile  skills-lock.json
entity/: Cargo.toml
entity/src/: email_verification_token.rs  employee.rs  employee_email_verification_token.rs  employee_refresh_token.rs  lib.rs  refresh_token.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260502_000001_create_user_table.rs  m20260509_000001_create_tables.rs  m20260509_000001_initial_schema.rs  m20260509_000002_auth_tables.rs  m20260509_000003_email_verification.rs  main.rs
migrations/: 20260509000001_create_tables.sql  20260509000001_initial_schema.sql  20260516000001_create_invitation_table.sql
src/: app.rs  auth.rs  config.rs  email.rs  features.rs  main.rs  models.rs  repositories.rs
src/app/: error.rs
src/app/handlers/users/: get_by_id.rs
src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs  token.rs
src/email/: noop.rs  sender.rs  smtp.rs
src/email/templates/: invite_employee.html  invite_employee.txt  verify_email.html  verify_email.txt
src/features/: auth.rs  dashboard_auth.rs  dashboard_invitations.rs  health.rs  users.rs
src/features/auth/: email_service.rs  login.rs  logout.rs  me.rs  mod.rs  refresh.rs  register.rs  resend_verification.rs  service.rs  service_impl.rs  service_mock.rs  verify_all.rs  verify_email.rs
src/features/dashboard_auth/: email_service.rs  login.rs  logout.rs  me.rs  refresh.rs  register.rs  resend_verification.rs  resend_verification_email.rs  service.rs  service_impl.rs  service_mock.rs  test_utils.rs  test_verify_all.rs  verify_all.rs  verify_email.rs
src/features/dashboard_invitations/: invite.rs  service.rs  service_impl.rs
src/features/health/: check_health.rs
src/features/users/: get_by_id.rs  mod.rs  service.rs  service_impl.rs  service_mock.rs
src/models/: employee.rs  employee_email_verification_token.rs  employee_refresh_token.rs  invitation.rs
src/repositories/: employee_email_verification_token_repository.rs  employee_refresh_token_repository.rs  employee_repository.rs  invitation_repository.rs  mod.rs
tests/: TEST_PLAN.md
tests/hurl/auth/: login.hurl
tests/hurl/dashboard_auth/: login.hurl  register.hurl
tests/hurl_e2e/dashboard_auth/: login.hurl  logout.hurl  me.hurl  refresh.hurl  register.hurl  register_weak_password.hurl  resend_verification.hurl  verify_email.hurl
tests/hurl_e2e/dashboard_invitations/: invite.hurl
tests/hurl_e2e/health/: check.hurl  health.hurl
tests/hurl_e2e/rate_limit/: basic.hurl
