[package]
name = "pos-backend"
version = "0.1.0"
edition = "2024"
description = "A headless POS + CMS backend built with Axum"
repository = "https://github.com/oungseik/pos-backend"

[workspace]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
  "migrate",
] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
large_enum_variant = "deny"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
redundant_clone = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
axum = { version = "0.8.9" }
axum-tracing-opentelemetry = "0.33.1"
bcrypt = "0.17"
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
hex = "0.4"
jsonwebtoken = "9"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = [
  "http-proto",
  "tokio",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["tokio"] }
rand = "0.8"
serde = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["tracing"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
