[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-query = { version = "=1.0.0-rc.34", features = ["derive", "backend-sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
