[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
entity = { path = "../entity" }
sea-query = { version = "=1.0.0-rc.34", features = ["backend-sqlite", "derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
