[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
dotenvy.workspace = true
sea-orm-migration = { version = "1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
tokio.workspace = true

[lints]
workspace = true
